[project]
name = "mountain-pass"
version = "0.1.0"
description = ""
authors = [
    {name = "FrasinyukGleb",email = "glebfrasinyuk@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[uvicorn] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
preview = false
ignore-init-module-imports = true
line-length = 120
include = ["*.py"]
exclude = ["*.git", "migrations", "venv38", "venv", "alembic", ".flake8", "pyproject.toml", "pytest.ini", "README.md"]
ignore = [
    "C901", "E501", "E203", "F403", "F405", "D100", "D103", "D104", "BLE001", "FIX002", "B905",
    "RET505", "RET506", "RET507", "RET508", "SIM114", "SIM102", "B904", "DJ012", "PT019",
    "B020", "SIM112", "PIE804", "E741", "DJ007", "B019", "B026", "B905",
    "A002", "A003",  "F401", "F841", "Q001", "Q000", "Q003", "N805"
]
select = ["E", "F", "A", "Q", "B", "COM", "C4", "DJ", "FIX", "PIE", "T20", "PT", "RET", "SIM", "N", "ERA", "ISC", "I"]
show-source = true
show-fixes = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.isort]
case-sensitive = false
order-by-type = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"